--- a/Calendar.Tests/packages.config
+++ b/Calendar.Tests/packages.config
@@ -5,4 +5,5 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" userInstalled="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" userInstalled="true" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" userInstalled="true" />
+  <package id="NUnit" version="2.6.4" targetFramework="net452" userInstalled="true" />
 </packages>
